--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   adapter: sqlite3
-  database: ":memory:"
+  database: "db/development.sqlite3"
   pool: 5
   timeout: 5000
 
@@ -14,13 +14,13 @@ development:
 # Do not set this db to the same as development or production.
 test: &test
   adapter: sqlite3
-  database: ":memory:"
+  database: "db/test.sqlite3"
   pool: 5
   timeout: 5000
 
 production:
   adapter: sqlite3
-  database: ":memory:"
+  database: "db/production.sqlite3"
   pool: 5
   timeout: 5000
 
