Get Elastic Search to work on Travis CI
The three changes involed are:

    First, start the server in the .travis.yml file, so it's available for tests
    Second, change the #destroy method so it explicitly creates the index each time (as implicit index creation isn't turned on for Travis)
    Finally ensure the #destroy method is called before tests start, not after

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 rvm:
   - 1.9.3
+before_install:
+  - sudo service elasticsearch start
+  - sleep 3
 before_script:
   - "bundle exec rake db:migrate db:test:prepare"
