Introduce an ElasticSearch message index, to replace the ActiveRecord based one
Using Elastic Search rather than ActiveRecord to index our messages enable us to easily perform full text searches on our messages.  This commit introduces a new index that should behave exactly as the ActiveRecord based version does.  The migration that moves data into Elastic Search takes a few minutes to complete (tested using a production dump of data on my machine).

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 rvm:
   - 1.9.3
+before_install:
+  - sudo service elasticsearch start
 before_script:
   - "bundle exec rake db:migrate db:test:prepare"
