Prepare the test database without relying on migrations.
This means we don't have to keep every constant referred to in any
migration around in the codebase forever.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ rvm:
 before_install:
   - sudo service elasticsearch start
 before_script:
-  - "bundle exec rake db:migrate db:test:prepare"
+  - "bundle exec rake db:schema:load db:test:prepare"
